updates to tabs, permission sets, describe driven by custom metadata type setting

--- a/force-app/main/default/classes/CacheExecution.cls
+++ b/force-app/main/default/classes/CacheExecution.cls
@@ -7,12 +7,22 @@ public with sharing class CacheExecution {
             + 'Announcement','WorkFeedbackRequest','LeadFeed','Address','Calendar','Idea','ContentVersion','Goal',
             + 'WorkTypeGroupFeed','WorkTypeGroup', 'ProductConsumed'};
 
+    public static boolean enableFullDescribeTest = false;
+
     @AuraEnabled
     public static CacheDemoWrapper finalCacheTest() {
-        String cacheKey = Label.partitionPrefix + 'ConfigList'; //'local.default.ConfigList' ;
+        
+        CachePartition__mdt partitionPrefix = getPartitionPrefix();
+        if (partitionPrefix == null)
+        {
+            throw new AuraHandledException('Partition Prefix was not found');
+        }
+        String cacheKey = partitionPrefix.Partition_Prefix__c + 'ConfigList'; //'local.default.ConfigList' ;
+        //String cacheKey = Label.partitionPrefix + 'ConfigList'; //'local.default.ConfigList' ;
         CacheDemoWrapper results = new CacheDemoWrapper();
         List<ObjectData> configList = new List<ObjectData>(); 
         Long startCacheTime = System.currentTimeMillis();
+       // try {
         configList = (List<ObjectData>)Cache.Org.get(cacheKey);
         Long endCacheTime = System.currentTimeMillis();
         Long totalCacheTime = endCacheTime - startCacheTime;
@@ -20,50 +30,65 @@ public with sharing class CacheExecution {
         {
            configList = new List<ObjectData>();
             Long startDescribeTime = System.currentTimeMillis();
-            /* This section is to execute only list of object names */
-
-           /* List<Schema.DescribeSobjectResult> objDescribeList = Schema.describeSObjects(objectNames1);
-            for (Schema.DescribeSObjectResult r : objDescribeList) {
+            
+            if(partitionPrefix.Full_Describe__c || (Test.isRunningTest() && enableFullDescribeTest))
+            {
+                /* This section executes a full global describe.*/ 
+                Map<String, Schema.SObjectType> globalDescribe = Schema.getGlobalDescribe();
+                for(Schema.SObjectType objectType : globalDescribe.values()) {
+                Schema.DescribeSObjectResult objDescribe = objectType.getDescribe();
                 List<FieldData> fieldDataList = new List<FieldData>();
-                for(Schema.SObjectField fieldType : r.fields.getMap().values()) {
+                for(Schema.SObjectField fieldType : objDescribe.fields.getMap().values()) {
                     Schema.DescribeFieldResult fieldDescribe = fieldType.getDescribe();
                     FieldData fd = new FieldData();
-                    fd.fieldName = fieldDescribe.getName();
-                    fd.fieldLabel = fieldDescribe.getLabel();
-                    fd.fieldType = fieldDescribe.getType().name();
-                    fieldDataList.add(fd);
+                        fd.fieldName = fieldDescribe.getName();
+                        fd.fieldLabel = fieldDescribe.getLabel();
+                        fd.fieldType = fieldDescribe.getType().name();
+                        fieldDataList.add(fd);
+                    }
+                // do it twice to cause error
+                for(Schema.SObjectField fieldType : objDescribe.fields.getMap().values()) {
+                    Schema.DescribeFieldResult fieldDescribe = fieldType.getDescribe();
+                    FieldData fd = new FieldData();
+                        fd.fieldName = fieldDescribe.getName();
+                        fd.fieldLabel = fieldDescribe.getLabel();
+                        fd.fieldType = fieldDescribe.getType().name();
+                        fieldDataList.add(fd);
+                    }
+                    ObjectData configToCache = new ObjectData();
+                    configToCache.objectName = objDescribe.getName();
+                    configToCache.objectLabel = objDescribe.getLabel();
+                    configToCache.fieldProperties = JSON.serialize(fieldDataList);
+                    configList.add(configToCache);
                 }
-                ObjectData od  = new ObjectData();
-                od.objectName = r.getName();
-                od.objectLabel = r.getLabel();
-                od.fieldProperties = JSON.serialize(fieldDataList);
-                configList.add(od);
-
-
-       
-            }*/
-            /* End describe sobject List */
-
-            /* This section executes a full global describe.*/ 
-            Map<String, Schema.SObjectType> globalDescribe = Schema.getGlobalDescribe();
-            for(Schema.SObjectType objectType : globalDescribe.values()) {
-        	Schema.DescribeSObjectResult objDescribe = objectType.getDescribe();
-            List<FieldData> fieldDataList = new List<FieldData>();
-            for(Schema.SObjectField fieldType : objDescribe.fields.getMap().values()) {
-                Schema.DescribeFieldResult fieldDescribe = fieldType.getDescribe();
-                 FieldData fd = new FieldData();
-                    fd.fieldName = fieldDescribe.getName();
-                    fd.fieldLabel = fieldDescribe.getLabel();
-                    fd.fieldType = fieldDescribe.getType().name();
-                    fieldDataList.add(fd);
-            }
-                ObjectData configToCache = new ObjectData();
-                configToCache.objectName = objDescribe.getName();
-                configToCache.objectLabel = objDescribe.getLabel();
-                configToCache.fieldProperties = JSON.serialize(fieldDataList);
-                configList.add(configToCache);
             /* End global describe */
-        }
+            
+            }
+            else {
+                /* This section is to execute only list of object names */
+                List<Schema.DescribeSobjectResult> objDescribeList = Schema.describeSObjects(objectNames1);
+                for (Schema.DescribeSObjectResult r : objDescribeList) {
+                    List<FieldData> fieldDataList = new List<FieldData>();
+                    for(Schema.SObjectField fieldType : r.fields.getMap().values()) {
+                        Schema.DescribeFieldResult fieldDescribe = fieldType.getDescribe();
+                        FieldData fd = new FieldData();
+                        fd.fieldName = fieldDescribe.getName();
+                        fd.fieldLabel = fieldDescribe.getLabel();
+                        fd.fieldType = fieldDescribe.getType().name();
+                        fieldDataList.add(fd);
+                    }
+                    ObjectData od  = new ObjectData();
+                    od.objectName = r.getName();
+                    od.objectLabel = r.getLabel();
+                    od.fieldProperties = JSON.serialize(fieldDataList);
+                    configList.add(od);
+
+                }
+            /* End describe sobject List */
+            
+
+           
+            }
             system.debug('configlist $$ ' + configList.size());
             Long endDescribeTime = System.currentTimeMillis();
             Long totalDescribeTime = endDescribeTime - startDescribeTime;
@@ -87,8 +112,24 @@ public with sharing class CacheExecution {
         }
 
         results.details = configList;
-      
+    //}catch(exception ex) {
+    //        system.debug('exception ' + ex.getMessage() + ' ' + ex.getCause()  + ' ' + ex.getTypeName());
+    //  }
         return results;
+    }
+
+
+    private static CachePartition__mdt getPartitionPrefix() {
+        List<CachePartition__mdt> partitionRecords = new List<CachePartition__mdt>();
+        partitionRecords = [select MasterLabel, DeveloperName, Full_Describe__c, Partition_Prefix__c from CachePartition__mdt where DeveloperName = 'DemoPartition' limit 1];
+        system.debug('partitionRecords $$ ' + partitionRecords);
+        if (!partitionRecords.isEmpty())
+        {
+            return partitionRecords[0];
+        }
+        else {
+            return null;
+        }
     }
 
 
